If you are doing your best,you will not have to worry about failure. :stuck_out_tongue:

--- a/1208/src/scss/main.scss
+++ b/1208/src/scss/main.scss
@@ -12,4 +12,7 @@
 @import '../../../libs/scss/layout/_font.scss';
 
 @import 'layout';
+@import './ui/_input.scss';
 @import './ui/color';
+
+@import './page/login.scss';
