--- a/1208/src/scss/ui/_color.scss
+++ b/1208/src/scss/ui/_color.scss
@@ -6,6 +6,9 @@ $colors: (
     (key: blue, val: #68ADFA),
     (key: ff0000, val: #ff0000),
     (key: red, val: #FF4D6B),
+    (key: ff0000, val: #ff0000),
+    (key: ff6d7e, val: #ff6d7e),
+    (key: f0f0f0, val: #f0f0f0),
     (key: f3, val: #f3f3f3),
     (key: f4, val: #F4F4F4),
     (key: f6, val: #F6F6F6),
