--- a/1208/src/scss/ui/_button.scss
+++ b/1208/src/scss/ui/_button.scss
@@ -32,3 +32,27 @@
     }
   }
 }
+
+
+.btn-file {
+  position: relative;
+  overflow: hidden;
+  vertical-align: middle;
+  background-color: #bfbfbf;
+  opacity: .7;
+  color: #FFF;
+  width: 100%;
+  &>input {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    font-size: 23px;
+    cursor: pointer;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    direction: ltr;
+  }
+}
