--- a/1208/src/scss/ui/_input.scss
+++ b/1208/src/scss/ui/_input.scss
@@ -48,23 +48,23 @@ input {
   display: none;
   &+label {
     position: relative;
-    height: 20px;
-    width: 20px;
+    height: 12px;
+    width: 12px;
     border-radius: 50%;
     border: 2px solid #bfbfbf;
     background-color: #d2d2d2;
     display: inline-block;
-    top: 5px;
+    top: 50%;
   }
   &:checked+label {
     position: relative;
-    height: 20px;
-    width: 20px;
+    height: 12px;
+    width: 12px;
     border-radius: 50%;
     border: 2px solid #ff6d7e;
     background-color: #ff98a4;
     display: inline-block;
-    top: 5px;
+    top: 50%;
     // &:after {
     //   position: absolute;
     //   content: '';
