不想写代码 :sleeping:

--- a/1208/src/scss/main.scss
+++ b/1208/src/scss/main.scss
@@ -26,5 +26,6 @@
 @import './ui/_button.scss';
 @import './ui/_icon.scss';
 @import './ui/_img.scss';
+@import './ui/_schedule.scss';
 
 @import './page/login.scss';
